--- a/hpa.yaml
+++ b/hpa.yaml
@@ -1,16 +1,27 @@
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: image-registry
+  name: hpa-resource-metrics-memory
   namespace: default
 spec:
-  maxReplicas: 7
-  minReplicas: 3
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: image-registry
-  targetCPUUtilizationPercentage: 75
-status:
-  currentReplicas: 5
-  desiredReplicas: 0
+  behavior:
+    scaleDown: 
+      policies: 
+      - type: Pods 
+        value: 4 
+        periodSeconds: 60 
+      - type: Percent
+        value: 10 
+        periodSeconds: 60
+      selectPolicy: Min 
+      stabilizationWindowSeconds: 300 
+    scaleUp: 
+      policies:
+      - type: Pods
+        value: 5 
+        periodSeconds: 70
+      - type: Percent
+        value: 12 
+        periodSeconds: 80
+      selectPolicy: Max
+      stabilizationWindowSeconds: 
