--- a/hpa.yaml
+++ b/hpa.yaml
@@ -1,27 +1,16 @@
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: hpa-resource-metrics-memory
-  namespace: default
+  creationTimestamp: null
+  name: php-apache
 spec:
-  behavior:
-    scaleDown: 
-      policies: 
-      - type: Pods 
-        value: 4 
-        periodSeconds: 60 
-      - type: Percent
-        value: 10 
-        periodSeconds: 60
-      selectPolicy: Min 
-      stabilizationWindowSeconds: 300 
-    scaleUp: 
-      policies:
-      - type: Pods
-        value: 5 
-        periodSeconds: 70
-      - type: Percent
-        value: 12 
-        periodSeconds: 80
-      selectPolicy: Max
-      stabilizationWindowSeconds: 
+  maxReplicas: 10
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: php-apache
+  targetCPUUtilizationPercentage: 50
+status:
+  currentReplicas: 0
+  desiredReplicas: 
