Update and rename hpa.yaml to hpa1.yaml

--- a/hpa1.yaml
+++ b/hpa1.yaml
@@ -12,5 +12,5 @@ spec:
     name: php-apache
   targetCPUUtilizationPercentage: 50
 status:
-  currentReplicas: 0
-  desiredReplicas: 
+  currentReplicas: 5
+  desiredReplicas: 8
